--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -44,8 +44,8 @@
                       <% else %>
                         <%= image_tag "https://isaojose.com.br/wp-content/uploads/2020/12/blank-profile-picture-mystery-man-avatar-973460.jpg", class: "profile-icon" %>
                       <% end %>
-                      <% unless check_status(trip) == false%>
-                        <% trip.bookings.each do |booking| %>
+                      <% trip.bookings.each do |booking| %>
+                        <% if check_status(booking)%>
                           <% if booking.user.photo.attached? %>
                             <%= cl_image_tag booking.user.photo.key, crop: :fill, class: "profile-icon" %>
                           <% else %>
