fixed a missing end

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -88,6 +88,7 @@
                       <% else %>
                         <%= image_tag "https://isaojose.com.br/wp-content/uploads/2020/12/blank-profile-picture-mystery-man-avatar-973460.jpg", class: "profile-icon" %>
                       <% end %>
+                    <% end %>
                   <% end %>
                 <% end %>
             </div>
